--- a/app/src/main/res/layout/recipe_recycler_item.xml
+++ b/app/src/main/res/layout/recipe_recycler_item.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tv_recipe_name"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Placeholder"
-    android:layout_margin="30dp"/>
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/iv_recipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_10"
+        android:contentDescription="@string/image_view_recipe"
+        android:gravity="center"
+        android:src="@mipmap/ic_recipe" />
+
+    <TextView
+        android:id="@+id/tv_recipe_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="@string/placeholder"
+        android:textSize="@dimen/size_20_sp"
+        android:textStyle="bold|italic" />
+
+</LinearLayout>
