--- a/app/src/main/res/layout/fragment_step_details.xml
+++ b/app/src/main/res/layout/fragment_step_details.xml
@@ -26,7 +26,7 @@
             android:layout_height="100dp"
             android:src="@mipmap/ic_recipe"
             android:layout_gravity="center_horizontal"
-            />
+            android:contentDescription="@string/thumbnail" />
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/exo_player_view"
